[package]
name = "ship_of_theseus_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# If using Candle (common for Rust LLMs)
candle-core = { git = "https://github.com/huggingface/candle.git", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = ["cuda"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", features = ["cuda"] }
# --- Core GUI & Async Components ---
eframe = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
ollama-rs = "0.1"
glob = "0.3"
rfd = "0.12"
base64 = "0.21"
image = "0.24"
arboard = "3.3"
pdf-extract = "0.7"

# --- On-Board Chip (Candle) ---
# [FIX] CUDA features removed to prevent build panic on CUDA 13.1
candle-core = { version = "0.8.0" }
candle-nn = { version = "0.8.0" }
candle-transformers = "0.8.0"
hf-hub = "0.3.2" 
tokenizers = "0.19.1"

# --- Vector Store ---
vectorlite = "0.1.0"